<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="video_settings_key"
        android:title="@string/video">

        <ListPreference
            android:key="video_encoder_key"
            android:title="@string/video_encoder" />

        <ListPreference
            android:key="video_resolution_key"
            android:title="@string/resolution" />

        <SeekBarPreference
            android:key="video_bitrate_key"
            android:title="@string/video_bitrate"
            android:defaultValue="800"
            android:min="100"
            android:max="10000" />

        <ListPreference
            android:key="video_fps_key"
            android:title="@string/video_fps"
            android:summary="@string/video_fps_summary"
            android:entries="@array/VideoFpsEntries"
            android:entryValues="@array/VideoFpsEntryValues"
            android:defaultValue="5" />

        <ListPreference
            android:key="video_orientation_key"
            android:title="@string/video_orientation"
            android:entries="@array/VideoOrientationEntries"
            android:entryValues="@array/VideoOrientationEntryValues"
            android:defaultValue="landscape" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="audio_settings_key"
        android:title="@string/audio">

        <SwitchPreference
            android:defaultValue="false"
            android:key="audio_enable_key"
            android:title="@string/audio_enable" />

        <ListPreference
            android:key="audio_encoder_key"
            android:title="@string/audio_encoder" />

        <ListPreference
            android:key="@string/audio_number_of_channels_key"
            android:title="@string/audio_number_of_channels"
            android:entries="@array/AudioNumberOfChannelsEntries"
            android:entryValues="@array/AudioNumberOfChannelsEntryValues" />

        <ListPreference
            android:key="audio_bitrate_key"
            android:title="@string/audio_bitrate"
            android:entries="@array/AudioBitrateEntries"
            android:entryValues="@array/AudioBitrateEntryValues" />

        <ListPreference
            android:key="audio_sample_rate_key"
            android:title="@string/audio_sample_rate" />

        <ListPreference
            android:key="audio_byte_format_key"
            android:title="@string/audio_byte_format" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="endpoint_category_key"
        android:title="@string/endpoint">

        <ListPreference
            android:key="endpoint_type_key"
            android:title="@string/endpoint_type" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="srt_server_key"
        android:title="@string/srt_server">

        <EditTextPreference
            android:key="server_ip_key"
            android:title="@string/server_ip" />

        <EditTextPreference
            android:key="server_port_key"
            android:title="@string/server_port"
            android:defaultValue="9998" />

        <EditTextPreference
            android:key="server_stream_id_key"
            android:title="@string/server_stream_id"
            android:defaultValue="@string/default_server_stream_id" />

        <EditTextPreference
            android:key="server_passphrase_key"
            android:title="@string/server_passphrase" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/server_enable_bitrate_regulation_key"
            android:title="@string/server_enable_bitrate_regulation" />

        <SeekBarPreference
            android:max="10000"
            android:defaultValue="5000"
            android:key="@string/server_video_target_bitrate_key"
            android:min="500"
            app:showSeekBarValue="true"
            android:title="@string/server_video_target_bitrate" />

        <SeekBarPreference
            android:max="10000"
            android:defaultValue="300"
            android:key="@string/server_video_min_bitrate_key"
            android:min="100"
            app:showSeekBarValue="true"
            android:title="@string/server_video_min_bitrate" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="rtmp_server_key"
        android:title="@string/rtmp_server">

        <EditTextPreference
            android:key="rtmp_server_url_key"
            android:title="@string/server_url"
            android:defaultValue="@string/default_rtmp_url" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="websocket_server_key"
        android:title="@string/websocket_server">

        <EditTextPreference
            android:key="websocket_server_url_key"
            android:title="@string/server_url"
            android:defaultValue="@string/default_websocket_url" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="websocket_enable_b_frames_key"
            android:title="@string/websocket_enable_b_frames" />

        <SeekBarPreference
            android:max="10"
            android:defaultValue="2"
            android:key="websocket_keyframe_interval_key"
            android:min="1"
            app:showSeekBarValue="true"
            android:title="@string/websocket_keyframe_interval" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="websocket_auto_reconnect_key"
            android:title="@string/websocket_auto_reconnect" />

        <SeekBarPreference
            android:max="10"
            android:defaultValue="0"
            android:key="websocket_reconnect_max_attempts_key"
            android:min="0"
            app:showSeekBarValue="true"
            android:title="@string/websocket_reconnect_max_attempts" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="websocket_enable_fps_limit_key"
            android:title="@string/websocket_enable_fps_limit" />

        <SeekBarPreference
            android:max="60"
            android:defaultValue="10"
            android:key="websocket_target_fps_key"
            android:min="1"
            app:showSeekBarValue="true"
            android:title="@string/websocket_target_fps" />

        <ListPreference
            android:key="websocket_frame_drop_strategy_key"
            android:title="@string/websocket_frame_drop_strategy"
            android:entries="@array/FrameDropStrategyEntries"
            android:entryValues="@array/FrameDropStrategyEntryValues"
            android:defaultValue="evenly_timed" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="websocket_keyframe_only_key"
            android:title="@string/websocket_keyframe_only" />

        <SeekBarPreference
            android:max="30"
            android:defaultValue="10"
            android:key="websocket_connect_timeout_key"
            android:min="3"
            app:showSeekBarValue="true"
            android:title="@string/websocket_connect_timeout" />

        <SeekBarPreference
            android:max="100"
            android:defaultValue="30"
            android:key="websocket_send_queue_size_key"
            android:min="5"
            app:showSeekBarValue="true"
            android:title="@string/websocket_send_queue_size" />

        <ListPreference
            android:key="websocket_queue_overflow_strategy_key"
            android:title="@string/websocket_queue_overflow_strategy"
            android:entries="@array/QueueOverflowStrategyEntries"
            android:entryValues="@array/QueueOverflowStrategyEntryValues"
            android:defaultValue="drop_oldest" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="websocket_batch_send_key"
            android:title="@string/websocket_batch_send" />

        <SeekBarPreference
            android:max="100"
            android:defaultValue="20"
            android:key="websocket_batch_interval_key"
            android:min="5"
            app:showSeekBarValue="true"
            android:title="@string/websocket_batch_interval" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="websocket_nagle_enabled_key"
            android:title="@string/websocket_nagle_enabled" />

        <SeekBarPreference
            android:max="60"
            android:defaultValue="0"
            android:key="websocket_ping_interval_key"
            android:min="0"
            app:showSeekBarValue="true"
            android:title="@string/websocket_ping_interval" />

        <SeekBarPreference
            android:max="1024"
            android:defaultValue="64"
            android:key="websocket_max_message_size_key"
            android:min="4"
            app:showSeekBarValue="true"
            android:title="@string/websocket_max_message_size" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="websocket_i_frame_priority_key"
            android:title="@string/websocket_i_frame_priority" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="ts_muxer_key"
        android:title="@string/ts_muxer">

        <EditTextPreference
            android:key="ts_muxer_service_key"
            android:title="@string/ts_muxer_service"
            android:defaultValue="@string/default_muxer_service" />

        <EditTextPreference
            android:key="ts_muxer_provider_key"
            android:title="@string/ts_muxer_provider"
            android:defaultValue="@string/default_ts_muxer_provider" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="language_settings_key"
        android:title="@string/language">

        <ListPreference
            android:key="@string/language_key"
            android:title="@string/language"
            android:entries="@array/LanguageEntries"
            android:entryValues="@array/LanguageEntryValues"
            android:defaultValue="en" />
    </PreferenceCategory>

</PreferenceScreen>